[package]
name = "queueber"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = { version = "0.21.4", features = ["rpc_try"] }
capnp-rpc = "0.21.0"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.5"
futures = { version = "0.3.31", features = ["io-compat"] }
rocksdb = "0.24.0"
tempfile = "3.20.0"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["compat", "full"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "time",
    "env-filter",
] }
console-subscriber = "0.4"
uuid = { version = "1.18.0", features = ["std", "v4", "v7", "zerocopy"] }

[build-dependencies]
capnpc = "0.21.2"

[dev-dependencies]
scopeguard = "1.2.0"
criterion = { version = "0.5" }

[[bench]]
name = "storage_bench"
harness = false
